@@ -1,3 +1,4 @@
+* Add breadcrumb as title of window form
 * Manage help for each selection
 * Display revision on dialog
 * Support empty value for timedelta converter
